fix scrollbar

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -55,7 +55,7 @@ a {
 
 .br {
 	border-bottom: 1px solid rgba(0,0,0,0.4);
-	margin: 0 35px 20px 40px;
+	margin: 0 25px 20px 40px;
 }
 
 .drop {
@@ -64,9 +64,14 @@ a {
 }
 
 .inf {
-	margin-top: 10px;
+	margin-top: 5px;
 	margin-left: 15px;
 	text-align: left;
+}
+
+.inf-name {
+	font-size: 16px;
+	font-weight: 600;
 }
 
 .avt {
@@ -74,6 +79,10 @@ a {
 	width: 60px;
 }
 
+.avt-pd {
+	padding-left: 40px;
+	padding-right: 0px;
+}
 .dropdown-menu {
 	padding: 0;
 }
